fix button wrap issues

--- a/assets/components/discuss/themes/modx/sass/cloud-sidebar.sass
+++ b/assets/components/discuss/themes/modx/sass/cloud-sidebar.sass
@@ -6,6 +6,8 @@ $spacing-single: 16px
 $c-cloud: #2f4a7b
 $r-border: 3px
 
+.m-cloud-banner-btn-wrap, .m-cloud-banner-btn-wrap:hover
+    text-decoration: none
 .m-cloud-banner
     +rem('margin', ($spacing-single*1.6) 0 $spacing-single 0)
     // margin-left: auto // needed to circumvent issue with rem converter using auto
@@ -89,8 +91,11 @@ $r-border: 3px
     background-color: #66a747
     @include box-shadow(0 2px 1px rgba(0,1,1,.34), 0 0 7px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.51))
     @include background-image(linear-gradient(bottom, #66a747 0%, #66a747 27.76%, #9ec650 100%))
+
+.m-cloud-banner-btn-wrap
     &:hover
-        background-color: #66a747
-        @include background-image(linear-gradient(bottom, #7db94f 0%, #7db94f 27.76%, #a6d055 100%))
+        .m-cloud-banner-cta
+            background-color: #66a747
+            @include background-image(linear-gradient(bottom, #7db94f 0%, #7db94f 27.76%, #a6d055 100%))
 
 
